Removed background video to image, fixed hover on mobile devices

--- a/apo/css/home.css
+++ b/apo/css/home.css
@@ -10,8 +10,11 @@ body {
 }
 
 nav {
+  position: fixed;
   font-family: 'Josefin Sans', sans-serif;  
   font-weight: 300;
+  width: 100%;
+  z-index: 100;
 }
 
 nav ul {    
@@ -78,21 +81,19 @@ nav a {
   nav ul li { font-size: 1.5em; }
 }
 
-.fullscreen-bg-video {
-  position: fixed;    
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  z-index: -200;
+.bg-photo {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background: url(../images/crossing-photo.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .logo-container {
-  position: absolute;
+  position: fixed;
   bottom: 40px;
   width: 100%;
   text-align: center;
@@ -104,18 +105,12 @@ nav a {
   min-width: 600px;
 }
 
-@media all and (max-device-width:375px) and (orientation:portrait) {
-  .fullscreen-bg-video { height: 100vh }
-  .logo { height: auto; min-width: auto; max-width: 80vw; }
-}
-
-@media all and (max-device-width:375px) and (orientation:landscape) {
-  .fullscreen-bg-video { height:auto; width: 100vw; }  
+@media all and (max-device-width:375px) {
   .logo { height: auto; min-width: auto; max-width: 80vw; }
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: flex-end;
